--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Anton",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "redis": "^2.7.1"
   }
