--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
-    "redis": "^2.7.1"
+    "redis": "^2.7.1",
+    "redis-lock": "^0.1.0"
   }
 }
